# Presence-Bot

./: .gitignore  Dockerfile  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 2024_02_23_1936-6feacd713d3a_version_1.py  2024_02_23_1937-f1be72c16d39_version_1_1.py  2024_02_23_1942-a1511ad56dbb_version_2.py  2024_02_23_2047-6a6d1aa3bddd_version_1.py  2024_02_23_2113-68ef616259c0_version_1.py  2024_02_24_2152-08d23f08c2a9_version_2.py  2024_02_25_1533-607f402936ad_version_1.py  2024_02_25_1804-afaff577226b_version_555.py
src/: config.py  index.py  run.py
src/database/: enums.py  models.py
src/database/models/: groups.py  invites.py  models.py  register.py  schedule.py  students.py  students_groups_association.py
src/handlers/: default.py
src/handlers/admin/: router.py
src/handlers/admin/handlers/: add_invite.py  security.py
src/handlers/users/: router.py
src/handlers/users/schedule/: router.py
src/handlers/users/schedule/handlers/: absent.py  present.py
src/handlers/users/start/: router.py
src/handlers/users/start/handlers/: start.py
src/keyboards/builder/: basic.py
src/middleware/: main_middleware.py
src/repositories/: group.py  invites.py  register.py  students.py
src/schemas/: students.py
src/services/: invites.py  students.py
src/utils/: repository.py  states.py  unitofwork.py
