[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["Roman505050 <myhun59@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.4.1"
sqlalchemy = "^2.0.27"
asyncpg = "^0.29.0"
pydantic-settings = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
